<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/mi_refreshList"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh_list"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/mi_ShowOrder"
        android:title="@string/order"
        android:icon="@drawable/show_order_icon"
        app:showAsAction="ifRoom">
        <menu>
            <group android:id="@+id/group_showOrder"
                android:checkableBehavior="single">
                <item android:id="@+id/mi_ASCorder"
                    android:title="@string/asc"
                    android:checked="true"/>
                <item android:id="@+id/mi_DESCorder"
                    android:title="@string/desc" />
                <item android:id="@+id/mi_RANDorder"
                    android:title="@string/random"/>
            </group>
        </menu>
    </item>

    <item android:id="@+id/mi_deleteAllLiked"
        android:title="@string/clear_liked"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/ic_delete_outline_24px"
        />

</menu>